Fixed Distorted CSS

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -4,6 +4,6 @@
 }
 
 .avatar.distorted {
-    width: 300px;
-    height: 600px;
+    width: 200px;
+    height: 400px;
 }
